<resources>
    <string name="app_name">CrowdSense</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

     <!--Navigation Menu-->
    <string name="nav_create">CREATE</string>
    <string name="nav_new_survey">New Survey</string>

    <string name="nav_discover">DISCOVER</string>
    <string name="nav_favorite_surveys">Favorites</string>
    <string name="nav_public_surveys">Public</string>
    <string name="nav_private_surveys">Private</string>

    <string name="nav_communicate">COMMUNICATE</string>
    <string name="nav_share">Share</string>
    <string name="nav_notifications">Notifications</string>

    <string name="nav_configure">CONFIGURE</string>
    <string name="nav_upgrade">Upgrade Account</string>

    <string name="nav_settings">Settings</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_help">Help</string>

</resources>
