<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/nav_create">
        <menu>
            <item
                android:id="@+id/nav_new_survey"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_new_survey" />
        </menu>
    </item>

    <item android:title="@string/nav_discover">
        <menu>
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_favorite_surveys" />
            <item
                android:id="@+id/nav_public"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/nav_public_surveys" />
            <item
                android:id="@+id/nav_private"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_private_surveys" />
        </menu>
    </item>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_notifications" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_share" />
        </menu>
    </item>

    <item android:title="@string/nav_configure">
        <menu>
            <item
                android:id="@+id/nav_upgrade"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_upgrade" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_log_out" />
        </menu>
    </item>

</menu>


